manifests/dev/stashapp/Deployment-stashapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: stashapp
    app.kubernetes.io/name: stashapp
    app.kubernetes.io/version: latest
  name: stashapp
  namespace: stashapp
spec:
  replicas: 0
  selector:
    matchLabels:
      app.kubernetes.io/instance: stashapp
      app.kubernetes.io/name: stashapp
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: stashapp
        app.kubernetes.io/name: stashapp
    spec:
      automountServiceAccountToken: true
      containers:
        - env:
            - name: PGID
              value: "1000"
            - name: PUID
              value: "1000"
            - name: TZ
              value: Etc/UTC
            - name: STASH_STASH_DIR
              value: /data
            - name: FFMPEG_EXE
              value: /usr/bin/ffmpeg
            - name: FFPROBE_EXE
              value: /usr/bin/ffprobe
          image: stashapp/stash:latest
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 9999
            initialDelaySeconds: 60
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 5
          name: stashapp
          ports:
            - containerPort: 9999
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 9999
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          securityContext:
            capabilities:
              add:
                - SYS_ADMIN
            privileged: false
          volumeMounts:
            - mountPath: /root/.stash
              name: config
            - mountPath: /data
              name: data
            - mountPath: /dev/dri
              name: dri
      nodeSelector:
        kubernetes.io/hostname: nixmini
      serviceAccountName: default
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: stashapp-stashapp-config
        - name: data
          persistentVolumeClaim:
            claimName: stashapp-stashapp-data
        - hostPath:
            path: /dev/dri
            type: Directory
          name: dri
