manifests/dev/stashapp/Ingress-stashapp.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: stashapp
  namespace: stashapp
spec:
  ingressClassName: traefik
  rules:
    - host: stashapp.home.kronkltd.net
      http:
        paths:
          - backend:
              service:
                name: stashapp
                port:
                  name: http
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - stashapp.home.kronkltd.net
      secretName: stashapp.home.kronkltd.net-tls
